edit signup multi

--- a/src/app/login/forgot-password/forgot-password.component.html
+++ b/src/app/login/forgot-password/forgot-password.component.html
@@ -1,42 +1,73 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <div class="container" style="background: white;">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="bg"></div>
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="bg"></div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="row content_header">
+          <div class="col-md-12">
+            <div ngbDropdown class="d-inline-block header_language">
+              <div class="social-icons" ngbDropdownToggle>
+                <span class="{{'language_icon' | translate }}"></span>
+                <div class="label">{{'language' | translate }}</div>
+              </div>
+
+              <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
+                <button ngbDropdownItem class="drop" (click)="switchLang('en')">
+                  <div style="display: flex; align-items: center;">
+                    <div class="db_user">
+                      <div class="db_icon_english"></div>
+                    </div>
+                    <div>{{'language_en' | translate }}</div></div>
+                </button>
+                <button ngbDropdownItem class="drop" (click)="switchLang('vi')">
+                  <div style="display: flex; align-items: center;">
+                    <div class="db_user">
+                      <div class="db_icon_vietnam"></div>
+                    </div>
+                    <div>{{'language_vi' | translate }}</div></div>
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-6">
-          <div class="d-flex flex-column"  style="height: 100vh;">
-              <form class="form-signin" [formGroup]="forgotPasswordForm" style="height: inherit;">
-                <div class="header-label">Quên mật khẩu</div>
-                <div class="header-infor">Nhập địa chỉ email bạn đã sử dụng đăng ký trên MobiFone eContract</div>
 
-                <div class="form-group">
-                  <div class="input-line">
-                    <img src="../../../assets/img/login_email.svg" class="input-img">
-                    <input type="text" id="email" formControlName="email" class="input-text" placeholder="Nhập email"/>
-                  </div>
-                </div>
+        <div class="row content_body">
 
-                <div class="form-group">
-                  <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
-                    <strong>{{errorDetail}}</strong>
-                  </p>
-                </div>
+          <form class="form-signin" [formGroup]="forgotPasswordForm">
+            <div class="header-label">{{'login.forgot_password' | translate }}</div>
+            <div class="header-infor">{{'login.forgot_password.note' | translate }}</div>
 
-                <div class="form-group" style="text-align: center;">
-                  <button (click)="sendForgetPassword(); error ? false : open(mymodal)" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Gửi yêu cầu</button>
-                </div>
-              </form>
-              <div class="bg-footer-login"></div>
+            <div class="form-group">
+              <div class="input-line">
+                <img src="../../../assets/img/login_email.svg" class="input-img">
+                <input type="text" id="email" formControlName="email" class="input-text" placeholder="{{'user.email' | translate}}"/>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
+                <strong>{{errorDetail}}</strong>
+              </p>
+            </div>
+
+            <div class="form-group" style="text-align: center;">
+              <button (click)="sendForgetPassword(); error ? false : open(mymodal)" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">{{'btn.sendRequest' | translate}}</button>
+            </div>
+          </form>
+        </div>
+
+        <div class="row content_footer">
+          <div class="col-md-12">
+            <div class="bg-footer-login"></div>
           </div>
         </div>
       </div>
     </div>
-  </body>
-</html>
-
+  </div>
+</body>
 
 <!-- Popup notification send email -->
 <ng-template #mymodal let-modal >
