--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -1,71 +1,102 @@
-<!DOCTYPE html>
-<html>
 <body>
-  <div class="container" style="background: white;">
+  <div class="container">
   <div class="row">
     <div class="col-md-6">
       <div class="bg"></div>
     </div>
-    <div class="col-md-6">
-      <div class="d-flex flex-column"  style="height: 100vh;">
-          <form class="form-signin" [formGroup]="resetPasswordForm" style="height: inherit;">
-            <div style="margin: 30px;color:#106DB6; font-size: 30px;">Đặt lại mật khẩu</div>
-            <div style="margin: 30px;font-weight: 500;color: #8f8a8a;">Nhập mật khẩu mới và xác nhận lại mật khẩu</div>
 
-            <div class="form-group">
-              <div class="input-line">
-                <img src="../../assets/img/login_password.svg" class="input-img">
-                <input id="password" formControlName="password" [type]="fieldTextType ? 'text' : 'password'"
-                class="input-text" placeholder="Mật khẩu mới"
-                />
-                <div class="icon-password">
+    <div class="col-md-6">
+      <div class="row content_header">
+        <div class="col-md-12">
+          <div ngbDropdown class="d-inline-block header_language">
+            <div class="social-icons" ngbDropdownToggle>
+              <span class="{{'language_icon' | translate }}"></span>
+              <div class="label">{{'language' | translate }}</div>
+            </div>
+
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
+              <button ngbDropdownItem class="drop" (click)="switchLang('en')">
+                <div style="display: flex; align-items: center;">
+                  <div class="db_user">
+                    <div class="db_icon_english"></div>
+                  </div>
+                  <div>{{'language_en' | translate }}</div></div>
+              </button>
+              <button ngbDropdownItem class="drop" (click)="switchLang('vi')">
+                <div style="display: flex; align-items: center;">
+                  <div class="db_user">
+                    <div class="db_icon_vietnam"></div>
+                  </div>
+                  <div>{{'language_vi' | translate }}</div></div>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row content_body">
+        <form class="form-signin" [formGroup]="resetPasswordForm">
+          <div style="margin: 30px;color:#106DB6; font-size: 30px;">{{'login.reset_password' | translate}}</div>
+          <div style="margin: 30px;font-weight: 500;color: #8f8a8a;">{{'login.password_new.confirm.note' | translate}}</div>
+
+          <div class="form-group">
+            <div class="input-line">
+              <img src="../../assets/img/login_password.svg" class="input-img">
+              <input id="password" formControlName="password" [type]="fieldTextType ? 'text' : 'password'"
+              class="input-text" placeholder="{{'login.password_new' | translate}}"
+              />
+              <div class="icon-password">
+                <i class="fa"
+                  [ngClass]="{
+                    'fa-eye-slash': !fieldTextType,
+                    'fa-eye': fieldTextType
+                  }"
+                  (click)="toggleFieldTextType()"
+                  style="color: #106DB6;"
+                ></i>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="input-line">
+              <img src="../../assets/img/login_password.svg" class="input-img">
+              <input id="confirmpassword" formControlName="confirmpassword" [type]="repeatFieldTextType ? 'text' : 'password'"
+              class="input-text" placeholder="{{'login.password_new.confirm' | translate}}" />
+              <div class="icon-password">
                   <i class="fa"
                     [ngClass]="{
-                      'fa-eye-slash': !fieldTextType,
-                      'fa-eye': fieldTextType
+                      'fa-eye-slash': !repeatFieldTextType,
+                      'fa-eye': repeatFieldTextType
                     }"
-                    (click)="toggleFieldTextType()"
+                    (click)="toggleRepeatFieldTextType()"
                     style="color: #106DB6;"
                   ></i>
-                </div>
               </div>
             </div>
+          </div>
 
-            <div class="form-group">
-              <div class="input-line">
-                <img src="../../assets/img/login_password.svg" class="input-img">
-                <input id="confirmpassword" formControlName="confirmpassword" [type]="repeatFieldTextType ? 'text' : 'password'"
-                class="input-text" placeholder="Xác nhận mật khẩu mới" />
-                <div class="icon-password">
-                    <i class="fa"
-                      [ngClass]="{
-                        'fa-eye-slash': !repeatFieldTextType,
-                        'fa-eye': repeatFieldTextType
-                      }"
-                      (click)="toggleRepeatFieldTextType()"
-                      style="color: #106DB6;"
-                    ></i>
-                </div>
-              </div>
-            </div>
+          <div class="form-group">
+            <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
+              <strong>{{errorDetail}}</strong>
+            </p>
+          </div>
 
-            <div class="form-group">
-              <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
-                <strong>{{errorDetail}}</strong>
-              </p>
-            </div>
+          <div class="form-group" style="text-align: center;">
+            <button (click)="sendResetPassword(); error ? false : open(mymodal)" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">{{'btn.sendRequest' | translate}}</button>
+          </div>
+        </form>
+      </div>
 
-            <div class="form-group" style="text-align: center;">
-              <button (click)="sendResetPassword(); error ? false : open(mymodal)" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Gửi yêu cầu</button>
-            </div>
-          </form>
+      <div class="row content_footer">
+        <div class="col-md-12">
           <div class="bg-footer-login"></div>
         </div>
       </div>
     </div>
   </div>
+  </div>
 </body>
-</html>
 
 <!-- Popup notification reset password -->
 <ng-template #mymodal let-modal >
