--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,103 +1,99 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <div class="container" style="background: white;">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="bg"></div>
-        </div>
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="bg"></div>
+      </div>
 
-        <div class="col-md-6">
-          <div class="row" style="height: 50px;">
-            <div class="col-md-12">
-              <div ngbDropdown class="d-inline-block" style="float: right;padding: 5px;">
-                <div class="social-icons" ngbDropdownToggle>
-                  <span class="{{'language_icon' | translate }}"></span>
-                  <div class="label">{{'language' | translate }}</div>
-                </div>
-
-                <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
-                  <button ngbDropdownItem class="drop" (click)="switchLang('en')">
-                    <div style="display: flex; align-items: center;">
-                      <div class="db_user">
-                        <div class="db_icon_english"></div>
-                      </div>
-                      <div>{{'language_en' | translate }}</div></div>
-                  </button>
-                  <button ngbDropdownItem class="drop" (click)="switchLang('vi')">
-                    <div style="display: flex; align-items: center;">
-                      <div class="db_user">
-                        <div class="db_icon_vietnam"></div>
-                      </div>
-                      <div>{{'language_vi' | translate }}</div></div>
-                  </button>
-                </div>
+      <div class="col-md-6">
+        <div class="row content_header">
+          <div class="col-md-12">
+            <div ngbDropdown class="d-inline-block header_language">
+              <div class="social-icons" ngbDropdownToggle>
+                <span class="{{'language_icon' | translate }}"></span>
+                <div class="label">{{'language' | translate }}</div>
               </div>
-            </div>
-          </div>
 
-          <div class="row" style="height: calc(100vh - 250px);">
-            <div class="col-md-12">
-              <div class="bg-header">
-                <div class="bg-header-login"></div>
-              </div>
-              <form class="form-signin" [formGroup]="loginForm" style="height: inherit;">
-                <div class="form-group">
-                  <div class="input-line">
-                    <img src="../../assets/img/login_user.svg" class="input-img">
-                    <input type="text" id="username" placeholder="Tên đăng nhập"
-                      formControlName="username" class="input-text"/>
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <div class="input-line">
-                    <img src="../../assets/img/login_password.svg" class="input-img">
-                    <input [type]="fieldTextType ? 'text' : 'password'"
-                      placeholder="Mật khẩu" formControlName="password" class="input-text"/>
-                    <div class="icon-password">
-                        <i class="fa"
-                          [ngClass]="{
-                            'fa-eye-slash': !fieldTextType,
-                            'fa-eye': fieldTextType
-                          }"
-                          (click)="toggleFieldTextType()"
-                          style="color: #106DB6;"
-                        ></i>
+              <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
+                <button ngbDropdownItem class="drop" (click)="switchLang('en')">
+                  <div style="display: flex; align-items: center;">
+                    <div class="db_user">
+                      <div class="db_icon_english"></div>
                     </div>
+                    <div>{{'language_en' | translate }}</div></div>
+                </button>
+                <button ngbDropdownItem class="drop" (click)="switchLang('vi')">
+                  <div style="display: flex; align-items: center;">
+                    <div class="db_user">
+                      <div class="db_icon_vietnam"></div>
+                    </div>
+                    <div>{{'language_vi' | translate }}</div></div>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row content_body">
+          <div class="col-md-12">
+            <div class="bg-header">
+              <div class="bg-header-login"></div>
+            </div>
+            <form class="form-signin" [formGroup]="loginForm">
+              <div class="form-group">
+                <div class="input-line">
+                  <img src="../../assets/img/login_user.svg" class="input-img">
+                  <input type="text" id="username" placeholder="{{'login.username' | translate }}"
+                    formControlName="username" class="input-text"/>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <div class="input-line">
+                  <img src="../../assets/img/login_password.svg" class="input-img">
+                  <input [type]="fieldTextType ? 'text' : 'password'"
+                    placeholder="{{'login.password' | translate }}" formControlName="password" class="input-text"/>
+                  <div class="icon-password">
+                      <i class="fa"
+                        [ngClass]="{
+                          'fa-eye-slash': !fieldTextType,
+                          'fa-eye': fieldTextType
+                        }"
+                        (click)="toggleFieldTextType()"
+                        style="color: #106DB6;"
+                      ></i>
                   </div>
                 </div>
+              </div>
 
-                <div class="form-group forgot-password">
-                  <a href="/forgot-password">Quên mật khẩu?</a>
-                </div>
+              <div class="form-group forgot-password">
+                <a href="/forgot-password">{{'login.forgot_password' | translate }}?</a>
+              </div>
 
-                <div class="form-group">
-                  <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
-                    <strong>{{errorDetail}}</strong>
-                  </p>
-                </div>
+              <div class="form-group">
+                <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
+                  <strong>{{errorDetail}}</strong>
+                </p>
+              </div>
 
-                <div class="form-group sub-login">
-                  <button class="btn btn-lg btn-block" (click)="loginUser()">Đăng nhập</button>
-                </div>
+              <div class="form-group sub-login">
+                <button class="btn btn-lg btn-block" (click)="loginUser()">{{'login' | translate }}</button>
+              </div>
 
-                <div class="form-group sign-up">
-                  <b>Bạn chưa có tài khoản?</b>&nbsp;<a href="/signup">Đăng ký</a>
-                </div>
-              </form>
-
-            </div>
+              <div class="form-group sign-up">
+                <b>{{'signup.not_account' | translate }}?</b>&nbsp;<a href="/signup">{{'signup' | translate }}</a>
+              </div>
+            </form>
           </div>
-
-          <div class="row" style="height: 200px;">
-            <div class="col-md-12">
-              <div class="bg-footer-login"></div>
-            </div>
-          </div>
-
         </div>
+
+        <div class="row content_footer">
+          <div class="col-md-12">
+            <div class="bg-footer-login"></div>
+          </div>
+        </div>
+
       </div>
     </div>
-  </body>
-</html>
+  </div>
+</body>
