--- a/src/app/login/signup/signup.component.html
+++ b/src/app/login/signup/signup.component.html
@@ -1,120 +1,149 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <div class="container" style="background: white;">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="bg"></div>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="bg"></div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="row content_header">
+          <div class="col-md-12">
+            <div ngbDropdown class="d-inline-block header_language">
+              <div class="social-icons" ngbDropdownToggle>
+                <span class="{{'language_icon' | translate }}"></span>
+                <div class="label">{{'language' | translate }}</div>
+              </div>
+
+              <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
+                <button ngbDropdownItem class="drop" (click)="switchLang('en')">
+                  <div style="display: flex; align-items: center;">
+                    <div class="db_user">
+                      <div class="db_icon_english"></div>
+                    </div>
+                    <div>{{'language_en' | translate }}</div></div>
+                </button>
+                <button ngbDropdownItem class="drop" (click)="switchLang('vi')">
+                  <div style="display: flex; align-items: center;">
+                    <div class="db_user">
+                      <div class="db_icon_vietnam"></div>
+                    </div>
+                    <div>{{'language_vi' | translate }}</div></div>
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="col-md-6">
-          <div class="d-flex flex-column" style="height: 100vh;">
-
-            <form [formGroup]="signupForm" style="height: inherit;">
-              <div style="margin: 20px 30px 0;color:#106DB6; font-size: 30px;">Đăng ký</div>
-              <div class="form-group">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <div class="input-line">
-                        <img src="../../assets/img/login_user.svg" class="input-img">
-                        <input type="text" id="username" placeholder="Tên tổ chức"
-                          formControlName="username" class="input-text"/>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <div class="input-line">
-                        <img src="../../assets/img/icon_edit.svg" class="input-img">
-                        <input type="text" id="username" placeholder="Quy mô"
-                          formControlName="username" class="input-text"/>
-                      </div>
+        <div class="row content_body">
+          <form [formGroup]="signupForm">
+            <div style="margin: 0 30px;color:#106DB6; font-size: 30px;">{{'signup' | translate}}</div>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <div class="input-line">
+                      <img src="../../assets/img/login_user.svg" class="input-img">
+                      <input type="text" id="username" placeholder="{{'organization' | translate}}"
+                        formControlName="username" class="input-text"/>
                     </div>
                   </div>
                 </div>
-
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <div class="input-line">
-                        <img src="../../assets/img/icon_edit.svg" class="input-img">
-                        <input type="text" id="username" placeholder="Địa chỉ"
-                          formControlName="username" class="input-text"/>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <div class="input-line">
-                        <img src="../../assets/img/icon_edit.svg" class="input-img">
-                        <input type="text" id="username" placeholder="Mã số thuế"
-                          formControlName="username" class="input-text"/>
-                      </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <div class="input-line">
+                      <img src="../../assets/img/icon_edit.svg" class="input-img">
+                      <input type="text" id="username" placeholder="{{'scale' | translate}}"
+                        formControlName="username" class="input-text"/>
                     </div>
                   </div>
                 </div>
+              </div>
 
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <div class="input-line">
-                        <img src="../../assets/img/icon_edit.svg" class="input-img">
-                        <input type="text" id="username" placeholder="Người đại diện"
-                          formControlName="username" class="input-text"/>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <div class="input-line">
-                        <img src="../../assets/img/icon_edit.svg" class="input-img">
-                        <input type="text" id="username" placeholder="Chức vụ"
-                          formControlName="username" class="input-text"/>
-                      </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <div class="input-line">
+                      <img src="../../assets/img/icon_edit.svg" class="input-img">
+                      <input type="text" id="username" placeholder="{{'address' | translate}}"
+                        formControlName="username" class="input-text"/>
                     </div>
                   </div>
                 </div>
-
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <div class="input-line">
-                        <img src="../../assets/img/login_email.svg" class="input-img">
-                        <input type="text" id="username" placeholder="Email"
-                          formControlName="username" class="input-text"/>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <div class="input-line">
-                        <img src="../../assets/img/icon_edit.svg" class="input-img">
-                        <input type="text" id="username" placeholder="Số điện thoại"
-                          formControlName="username" class="input-text"/>
-                      </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <div class="input-line">
+                      <img src="../../assets/img/icon_edit.svg" class="input-img">
+                      <input type="text" id="username" placeholder="{{'tax_code' | translate}}"
+                        formControlName="username" class="input-text"/>
                     </div>
                   </div>
                 </div>
+              </div>
 
-                <!-- <div class="form-group">
-                  <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
-                    <strong>{{errorDetail}}</strong>
-                  </p>
-                </div> -->
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <div class="input-line">
+                      <img src="../../assets/img/icon_edit.svg" class="input-img">
+                      <input type="text" id="username" placeholder="{{'representative' | translate}}"
+                        formControlName="username" class="input-text"/>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <div class="input-line">
+                      <img src="../../assets/img/icon_edit.svg" class="input-img">
+                      <input type="text" id="username" placeholder="{{'position' | translate}}"
+                        formControlName="username" class="input-text"/>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
-                <div class="form-group sub-login" style="width: 60%;margin: 0 auto;">
-                  <button class="btn btn-lg btn-block" (click)="sendSignup(); error ? false : open(modalNotifiSignup)">Gửi yêu cầu</button>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <div class="input-line">
+                      <img src="../../assets/img/login_email.svg" class="input-img">
+                      <input type="text" id="username" placeholder="{{'user.email' | translate}}"
+                        formControlName="username" class="input-text"/>
+                    </div>
+                  </div>
                 </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <div class="input-line">
+                      <img src="../../assets/img/icon_edit.svg" class="input-img">
+                      <input type="text" id="username" placeholder="{{'user.phone' | translate}}"
+                        formControlName="username" class="input-text"/>
+                    </div>
+                  </div>
                 </div>
-            </form>
+              </div>
+
+              <!-- <div class="form-group">
+                <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
+                  <strong>{{errorDetail}}</strong>
+                </p>
+              </div> -->
+
+              <div class="form-group sub-login" style="width: 60%;margin: 0 auto;">
+                <button class="btn btn-lg btn-block" (click)="sendSignup(); error ? false : open(modalNotifiSignup)">{{'btn.sendRequest' | translate}}</button>
+              </div>
+              </div>
+          </form>
+        </div>
+        <div class="row content_footer">
+          <div class="col-md-12">
             <div class="bg-footer-login"></div>
           </div>
         </div>
       </div>
     </div>
-  </body>
-</html>
+  </div>
+</body>
 
 <!-- Popup notification signup -->
 <ng-template #modalNotifiSignup let-modal >
