--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -6,22 +6,17 @@
       <div class="input-line">
         <ngx-datepicker [(ngModel)]="filter_from_date" [options]="options" class="date-picker"></ngx-datepicker>
         <img src="assets/img/db_calendar.svg" class="input-img">
-        <!-- <input type="text" class="input-text"/>
-        <img src="../../assets/img/db_calendar.svg" class="input-img"> -->
       </div>
     </div>
     <div class="col-md-3">
       <div>{{'createdate.end' | translate}}</div>
       <div class="input-line">
-        <input type="text" class="input-text"/>
-        <img src="../../assets/img/db_calendar.svg" class="input-img">
+        <ngx-datepicker [(ngModel)]="filter_to_date" [options]="options" class="date-picker"></ngx-datepicker>
+        <img src="assets/img/db_calendar.svg" class="input-img">
       </div>
     </div>
-    <div class="col-md-3">
-      <div></div>
-      <div class="form-group">
-        <button class="btn btn-lg btn-block">{{'btn.search' | translate }}</button>
-      </div>
+    <div class="col-md-3 btn_search">
+      <button class="btn btn-lg btn-block">{{'btn.search' | translate }}</button>
     </div>
   </div>
   <div class="row" style="padding-top: 20px;">
