--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -16,6 +16,9 @@
   outline:0px;
   border-radius: 5px;
 }
+.btn_search{
+  align-self: flex-end;
+}
 .btn-block {
   background-color: #106DB6;
   color: white;
