--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -47,7 +47,7 @@
       </div>
 
       <div class="col-md-2 calendar_deadline">
-        <i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.signTime | date: 'dd/MM/yyyy'}}</span>
+        <i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date: 'dd/MM/yyyy'}}</span>
       </div>
 
       <div class="col-md-3 item_icon">
