open api add contract 1, 4

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -81,7 +81,7 @@ header {
 
 }
 .social-icons:hover {
-  background: #f3f8ff;
+  background: #c5ebff;
 }
 
 
@@ -128,12 +128,12 @@ h3{
 .drop{
   padding: 10px;
   color:#106DB6;
-  min-height: 55px;
+  min-height: 45px;
 }
 .drop_red{
   padding: 10px;
   color: #ED1C24;
-  min-height: 55px;
+  min-height: 45px;
 }
 .drop_icon{
   width: 20px
@@ -210,15 +210,15 @@ h3{
   background-image: url(../../assets/img/db_user_detail.svg);
 }
 .db_password {
-  height: 35px;
-  width: 35px;
+  height: 25px;
+  width: 25px;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(../../assets/img/db_password.svg);
 }
 .db_log_out {
-  height: 20px;
-  width: 20px;
+  height: 18px;
+  width: 18px;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(../../assets/img/db_log_out.svg);
