--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -38,7 +38,7 @@
       <div class="col-md-5">
         <div class="row">
           <div class="col-md-12 item_contract_infor">Trạng thái:
-            <span class="status_blue">{{item.status}}</span>
+            <span class="status_blue">{{item.status | pipe}}</span>
           </div>
         </div>
       </div>
