--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
@@ -9,29 +9,34 @@
           <div style="display: inline-block; padding-right: 5px">Loại hợp đồng:</div>
 <!--          <span>{{datas.contractType}}</span>-->
           <div style="display: inline-block" *ngFor="let d of this.datas.type_id; let i = index">
-            <span>{{d.item_text}}</span>
-            <span>{{i == (this.datas.type_id.length - 1) ? '' : ', '}}</span>
+<!--            <span>{{d.item_text}}</span>-->
+<!--            <span>{{i == (this.datas.type_id.length - 1) ? '' : ', '}}</span>-->
+            <span>ABC</span>
           </div>
         </div>
         <div class="name-contract">
           <div class="title-contract" style="display: inline-block">Tên hợp đồng:</div>
-          <div style="display: inline-block">{{datas.name}}</div>
+          <div style="display: inline-block">{{datas.infor_contract.name}}</div>
         </div>
         <div class="number-contract">
           <div class="title-contract" style="display: inline-block">Số hợp đồng:</div>
-          <div style="display: inline-block">{{datas.code}}</div>
+          <div style="display: inline-block">{{datas.infor_contract.code}}</div>
         </div>
         <div class="file-attach-contract">
           <div class="title-contract" style="display: inline-block">File đính kèm:</div>
           <div style="display: inline-block">
-            <span class="text-decoration-style">{{this.datas.attachFile.name}}</span>
+<!--            <span class="text-decoration-style">{{this.datas.infor_contract.name_attach_file}}</span>-->
+            <span class="text-decoration-style">hopdong.docx</span>
           </div>
         </div>
         <div class="contract-coordination">
           <div class="title-contract" style="display: inline-block">Hợp đồng liên quan:</div>
-          <div style="display: inline-block" *ngFor="let d of this.datas.contractConnect; let i = index">
-            <span class="text-decoration-style">{{d.item_text}}</span>
-            <span>{{i == (this.datas.contractConnect.length - 1) ? '' : ', '}}</span>
+<!--          <div style="display: inline-block" *ngFor="let d of this.datas.contractConnect; let i = index">-->
+<!--            <span class="text-decoration-style">{{d.item_text}}</span>-->
+<!--            <span>{{i == (this.datas.contractConnect.length - 1) ? '' : ', '}}</span>-->
+<!--          </div>-->
+          <div style="display: inline-block">
+            <span class="text-decoration-style">hop_dong_a.docx</span>
           </div>
         </div>
       </div>
@@ -41,8 +46,8 @@
     <div class="location-change" [ngStyle]="changeDisplay()">
       <div class="sample-contract__information--user-sign" style="line-height: 25px">
         <div style="text-align: center;" class="label">CÁC BÊN LIÊN QUAN</div>
-        <div>{{datas.userForm.name}}</div>
-        <div *ngFor="let d of this.datas.partnerForm.partnerArrs">
+<!--        <div>{{datas.userForm.name}}</div>-->
+        <div *ngFor="let d of this.datas.determine_contract">
           <span class="label" style="color: black; font-size: 13px">{{d.name}}</span>
         </div>
 
@@ -60,8 +65,7 @@
 
   <!--  file content-->
   <!--  width: 74.7%-->
-  <div class="col-md-9 sample-contract__file viewer-pdf isDrag"
-       style="background-color: #F2F2F2; position: relative;">
+  <div class="col-md-9 sample-contract__file viewer-pdf isDrag" style="background-color: #f3f7f9; position: relative">
     <div id="pdf-viewer-step-3">
       <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
         <div class="resize-drag not-out-drop"
@@ -72,11 +76,9 @@
              [ngClass]="changeColorDrag(null,true)"
              [ngStyle]="changePosition(d)">
           <div class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>
-          <!--          </div>-->
           <app-sign-contract [datas]="datas" [sign]="d"></app-sign-contract>
         </div>
       </div>
     </div>
   </div>
   <!--<app-footer-signature *ngIf="this.datas.step == 'infor-coordination'" [datas]="datas"></app-footer-signature>-->
-
