--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
@@ -1,12 +1,14 @@
-.add_content{
+.add_content {
   border-radius: 10px;
   border: 1px solid #0160AE;
-  margin-bottom: 10px;
+  margin-top: 10px;
 }
-.add_click{
+
+.add_click {
   margin: 10px;
 }
-.add_link{
+
+.add_link {
   padding-top: 5px;
   color: #b8bcbf;
   font-weight: 400;
@@ -14,7 +16,8 @@
   text-decoration: none;
   cursor: pointer;
 }
-.label{
+
+.label {
   font-weight: 500;
   color: #0160AE;
   background-color: #C7D0E9;
@@ -24,76 +27,89 @@
   align-items: center;
   padding-left: 16px;
 }
-.label_item{
+
+.label_item {
   padding: 12px 0px 3px;
   color: #5e5e5e;
 }
-.order{
+
+.order {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.order_input{
+
+.order_input {
   background: #f9f9f9;
   text-align: center;
   padding: 5px 1px;
   width: 40px;
   font-size: inherit;
 }
-.input_phone{
+
+.input_phone {
   font-size: inherit;
 }
-.remove{
+
+.remove {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.remove_icon{
+
+.remove_icon {
   color: #b8bcbf;
   cursor: pointer;
 }
-.form-check-input{
+
+.form-check-input {
   width: 20px;
   margin: 0;
   height: 20px;
 }
-.form_content{
+
+.form_content {
   border: 1px solid #0160AE;
   padding: 8px;
   border-radius: 10px;
 }
 
-.label-disable .label {
-  border-radius: 10px 10px 10px 10px;
-}
-
-.require_star{
+.require_star {
   color: red;
 }
-.partner_content{
+
+.partner_content {
   padding-top: 20px;
 }
-.labelOrg{
+
+.labelOrg {
   padding: 10px 0px 5px;
   font-weight: 500;
+  text-transform: uppercase;
 }
-.textOrg{
+
+.textOrg {
   font-size: inherit;
 }
-.form-control{
+
+.form-control {
   border: 1px solid #87CAFF;
 }
+
 .form-control:disabled, .form-control[readonly] {
   background-color: #f9f9f9;
 }
-hr{
+
+hr {
   border: 1px solid #0160AE;
 }
-.label_type{
+
+.label_type {
   text-align: center;
   font-weight: 500;
   padding: 10px;
 }
+
 //input type number
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -101,6 +117,7 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
@@ -112,6 +129,7 @@ input[type=number] {
     max-width: 100% !important;
   }
 }
+
 //style button
 .action-button {
   width: 100px;
@@ -153,31 +171,225 @@ input[type=number] {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   .content_footer {
-    color:#0160AE;
+    color: #0160AE;
     font-size: 13px;
     font-weight: 500;
   }
 }
 
-.error-detail{
+.error-detail {
   font-size: inherit;
   padding: 7px;
   margin-top: 5px;
   margin-bottom: 0;
 }
+
 .input-line {
   display: flex;
   position: relative;
 }
+
 .input-img {
   top: 10px;
   left: 20px;
 }
-.input-text{
+
+.input-text {
   border: 0;
   width: 90%;
   padding-left: 10px;
   outline: 0;
   font-size: 14px;
 }
+
+// defind json data follow backend
+
+.contract-determine {
+  display: flex;
+  align-items: center;
+
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  .contract--content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contract__content--title {
+    display: flex;
+    color: #106DB6;
+    align-items: center;
+    margin-bottom: 8px;
+
+    > div {
+      width: 158px;
+    }
+
+    > input {
+      padding-left: 10px;
+      outline: none;
+      height: 37px;
+      width: 100%;
+      border-radius: 7px;
+      border: 1px solid #106DB6;
+    }
+  }
+
+  .contract__content--participants {
+    border-radius: 10px;
+    border: 1px solid #87CAFF;
+    background-color: #F9FDFF;
+    padding: 19px 10px 13px 10px;
+
+    .participants--content {
+      display: flex;
+      background-color: #FFFFFF;
+      align-items: center;
+      justify-content: space-around;
+      border-radius: 0 0 11px 11px;
+
+      ::ng-deep .mat-form-field {
+        width: 100%;
+        background-color: white !important;
+        &-flex {
+          border: 1px solid #106DB6;
+          border-radius: 5px;
+          background-color: white !important;
+        }
+        &-infix {
+          border-top: 0;
+        }
+      }
+
+      .participants__content--input .participants-information {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        margin-bottom: 14px;
+
+        .participants-signature-type {
+          width: 90%;
+          text-align: center;
+        }
+      }
+
+      .participants--input {
+        display: flex;
+        justify-content: space-around;
+
+        .participants__name {
+          width: 40%;
+
+          .input-data {
+            border: 1px solid #106DB6;
+            border-radius: 5px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+
+            > img {
+              padding-left: 14px;
+            }
+
+            > input {
+              border: none;
+              outline: none;
+              padding-left: 19px;
+              width: 100%;
+            }
+          }
+
+          input {
+            outline: none;
+            padding-left: 19px;
+            width: 100%;
+          }
+
+        }
+      }
+
+      .delete-element {
+        position: relative;
+        cursor: pointer;
+
+        .close-btn {
+          position: absolute;
+          top: 9px;
+          left: 3.7px;
+        }
+      }
+
+      .select-text-input {
+        display: flex;
+        //margin: 0 29px;
+        margin: 0 44px;
+
+        div:first-child, div:last-child {
+          width: 42%;
+        }
+
+        .participants__name:last-child {
+          input {
+            border: 1px solid #106DB6;
+            border-radius: 5px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+          }
+        }
+
+        .participants-otp {
+          position: relative;
+          top: 40px;
+
+          input {
+            top: 13px;
+            position: absolute;
+          }
+        }
+
+      }
+
+    }
+
+    .participants-border {
+      border-radius: 11px 11px 11px 11px;
+      border: 1px solid #ddd;
+
+      .participants--add {
+        display: inline-block;
+        color: #106DB6;
+        cursor: pointer;
+      }
+
+      &:not(:last-child) {
+        margin-bottom: 10px;
+      }
+    }
+
+    ::ng-deep .multiselect-dropdown .dropdown-btn {
+      border: 1px solid #106DB6 !important;
+    }
+
+  }
+
+  .text-color {
+    background-color: #FFFFFF;
+    border-radius: 0 0 11px 11px;
+  }
+}
+
+.contract-total {
+  border: 1px solid #106DB6;
+  color: #106DB6;
+  text-align: center;
+  border-radius: 5px;
+}
+
+//::ng-deep .mat-form-field-flex {
+//  background-color: white;
+//}
