--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/infor-contract/infor-contract.component.html
@@ -2,13 +2,13 @@
 <div>
   <div class="row">
     <div class="radio col-md-4 label_type">
-      <label><input type="radio" name="type" checked> {{'contract.not-by-template' | translate}}</label>
+      <label><input type="radio" name="type" checked (change)="changeAddContract('/main/form-contract/add')"> {{'contract.not-by-template' | translate}}</label>
     </div>
     <div class="radio col-md-4 label_type">
-      <label><input type="radio" name="type"> {{'contract.by-template' | translate}}</label>
+      <label><input type="radio" name="type" (change)="changeAddContract('/main/form-contract-batch/add')"> {{'contract.by-template' | translate}}</label>
     </div>
     <div class="radio col-md-4 label_type">
-      <label><input type="radio" name="type"> {{'contract.by-batch' | translate}}</label>
+      <label><input type="radio" name="type" (change)="changeAddContract('/main/form-contract-batch/add')"> {{'contract.by-batch' | translate}}</label>
     </div>
   </div>
 
@@ -36,7 +36,7 @@
                (change)="fileChanged($event)" style="display: none;"/>
         <div class="file-contract" (click)="addFile()">
           <img src="assets/img/upload_file.svg" alt="mobifone.contract">
-          <div style="padding-top: 7px;"><span style="color: #798693;" *ngIf="this.datas.file_name==null">{{'choose.contract.file' | translate }}</span>{{this.datas.file_name}}</div>
+          <div style="padding-top: 7px;"><span style="color: #798693;" *ngIf="this.datas.infor_contract.file_name==null">{{'choose.contract.file' | translate }}</span>{{this.datas.infor_contract.file_name}}</div>
         </div>
       </div>
       <div class="form-group">
@@ -140,7 +140,8 @@
   <div style="width: 200px;"></div>
   <div class="content_footer">@Copyright 2021 - MobiFone</div>
   <div>
-    <button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>
+    <button type="button" name="next" class="next draft-button">{{'btn.save-draff' | translate }}</button>
+    <button (click)="next()" type="button" name="next" class="next action-button pull-right">{{'btn.next' | translate }}</button>
   </div>
 </div>
 
