edit contract list

--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -4,7 +4,7 @@
   position: relative;
 }
 .input-img {
-  top: 10px;
+  top: 6px;
   right: 20px;
   position: absolute;
 }
@@ -22,8 +22,8 @@
 .btn-block {
   background-color: #106DB6;
   color: white;
-  height: 38px;
-  font-size: 14px;
+  height: 33px;
+  font-size: inherit;
   width: 100px;
   border-radius: 5px;
 }
@@ -35,7 +35,7 @@
     input {
       display: block !important;
       width: 100% !important;
-      height: 38px !important;
+      height: 33px !important;
       padding: .375rem .75rem !important;
       font-size: inherit !important;
       line-height: 1.5 !important;
