--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -20,17 +20,31 @@
     </div>
   </div>
   <div class="row" style="padding-top: 20px;">
-    <div class="col-md-2"></div>
-    <div class="col-md-3">
-      <div [chart]="chartCreated"></div>
-      <div style="text-align: center;">{{'chart.contract.created' | translate}}</div>
+    <div class="col-md-1"></div>
+    <div class="col-md-5">
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div [chart]="chartCreated"></div>
+        </div>
+        <div class="col-md-2"></div>
+        <div class="col-md-12" style="text-align: center;">{{'chart.contract.created' | translate}}</div>
+      </div>
     </div>
-    <div class="col-md-2"></div>
-    <div class="col-md-3">
-      <div [chart]="chartReceived"></div>
-      <div style="text-align: center;">{{'chart.contract.received' | translate}}</div>
+
+    <div class="col-md-1"></div>
+
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div [chart]="chartReceived"></div>
+        </div>
+        <div class="col-md-2"></div>
+        <div class="col-md-12" style="text-align: center;">{{'chart.contract.received' | translate}}</div>
+      </div>
     </div>
-    <div class="col-md-2"></div>
+    <div class="col-md-1"></div>
   </div>
 </div>
 
