--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -186,37 +186,10 @@
         <div class="row" style="text-align: center; padding-top: 10px;">
           <div class="col-md-12">
             <button type="button" class="btn btn-outline-dark btn_close" (click)="modal.close('Save click')">Hủy bỏ</button>
-            <button type="button" class="btn btn-outline-dark btn_submit" (click)="sendResetPassword(); error ? false : open(modalNotifiReset)">Gửi yêu cầu</button>
+            <button type="button" class="btn btn-outline-dark btn_submit" (click)="sendResetPassword(); status==0 ? modal.close('Save click'):0">Gửi yêu cầu</button>
           </div>
         </div>
       </form>
-    </div>
-  </div>
-</ng-template>
-
-<!-- Popup notification reset password -->
-<ng-template #modalNotifiReset let-modal >
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="modal-header" style="align-items: start; height: 50px;">
-          <h3>THÔNG BÁO</h3>
-          <button type="button" class="close" (click)="modal.dismiss('Cross click')" style="border: none;background: none;">
-            <span style="font-size: 25px;">×</span>
-          </button>
-        </div>
-
-          <!-- <div class="form-group">
-            <div class="input-group">
-              <p class="alert" role="alert"  [ngClass]="{'alert-danger' : status==0, 'alert-primary' : status==1}" style="text-align: center;">
-              {{notification}}
-            </p>
-            </div>
-          </div>
-          <div class="form-group" style="text-align: center; padding-top: 30px;">
-            <button (click)="modal.dismiss('Cross click'); status==1 ? returnLogin():1" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Đồng ý</button>
-          </div> -->
-      </div>
     </div>
   </div>
 </ng-template>
