edit contract list

--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -29,10 +29,10 @@
       <div class="col-md-12 item_contract_name" (click)="openDetail(item.id)">{{item.name}}</div>
     </div>
     <div class="row">
-      <div class="col-md-12 item_contract_infor">Bên A: {{item.userName}}</div>
+      <div class="col-md-12 item_contract_infor">Bên A: {{item.sideA}}</div>
     </div>
     <div class="row">
-      <div class="col-md-12 item_contract_infor">Bên B: {{item.partnerName}}</div>
+      <div class="col-md-12 item_contract_infor">Bên B: {{item.sideB}}</div>
     </div>
     <div class="row">
       <div class="col-md-5">
