--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -39,7 +39,7 @@
   <div class="labelOrg">CÁC BÊN KÝ</div>
   <div class="determine_contact">
     <div class="user_contact">
-      <div class="label">CÔNG TY TNHH ABC</div>
+      <div class="label">TỔ CHỨC CỦA TÔI</div>
       <div class="content_determine">
         <div class="row">
           <div class="col-md-5">
