--- a/src/app/main/contract-signature/contract-signature.component.scss
+++ b/src/app/main/contract-signature/contract-signature.component.scss
@@ -9,13 +9,13 @@
 .item_contract:hover{
   background-color: rgb(255, 254, 254);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  cursor: pointer;
 }
 
 .item_contract_name {
   font-weight: 500;
   font-size: 16px;
   color: #106DB6;
+  cursor: pointer;
 }
 
 .item_contract_infor{
@@ -84,6 +84,7 @@
 .popup_title{
   margin: 0;
   font-weight: 500;
+  text-transform: uppercase;
 }
 .popup_close{
   font-size: 25px;
@@ -96,6 +97,7 @@
   background: #6c6c6d;
   color: white;
   border: 1px solid #808183;
+  margin: 0 5px;
 }
 .btn_submit{
   width: 90px;
@@ -103,6 +105,7 @@
   background: #106DB6;
   color: white;
   border: 1px solid #87CAFF;
+  margin: 0 5px;
 }
 .label_item{
   padding: 10px 0px 5px;
@@ -121,6 +124,11 @@
 .input-img {
   padding: 10px;
   cursor: pointer;
+}
+.input-img-calendar {
+  top: 10px;
+  right: 15px;
+  position: absolute;
 }
 .input-text {
   border: 0;
@@ -209,4 +217,25 @@
   border: 1px solid #ced4da !important;
   border-radius: .25rem !important;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
+  outline: 0;
 }
+
+.btn-block {
+  background-color: #106DB6;
+  color: white;
+  height: 40px;
+  font-size: 14px;
+  width: 100%;
+  border-radius: 5px;
+}
+.div_icon{
+  padding: 0 10px;
+}
+.img_icon{
+  width: 18px;
+  cursor: pointer;
+}
+.img_icon:hover{
+  width: 30px;
+}
+
