--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="col-md-2 calendar_create">
-        <i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.createdAt | date: 'dd/MM/yyyy'}}</span>
+        <i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.created_at | date: 'dd/MM/yyyy'}}</span>
       </div>
 
       <div class="col-md-2 calendar_deadline">
